broke out all of the individual content types, added collection pages and menus

--- a/src/content/landing-pages/want-to-get-in-touch-with-us-we-re-here-to-help-you.mdx
+++ b/src/content/landing-pages/want-to-get-in-touch-with-us-we-re-here-to-help-you.mdx
@@ -1,7 +1,7 @@
 ---
-title: "About Open Opportunities"
-meta_title: "About Open Opportunities - Global Tender Alert Service"
-description: "Learn about Open Opportunities, the world's most comprehensive tender alert service helping businesses find and win government contracts globally."
+title: "Want to get in touch with us? We’re here to help you."
+meta_title: "Want to get in touch with us? We’re here to help you. - Open Opportunities"
+description: "Want to get in touch with us? We’re here to help you."
 draft: false
 ---
 
