added structures to research pages - research collection page and table of contents on source page. Stats shortcodes also added.

--- a/src/content/product/when-open-opportunities-isn-t-right-for-you.mdx
+++ b/src/content/product/when-open-opportunities-isn-t-right-for-you.mdx
@@ -10,9 +10,9 @@ draft: false
 
 Open Opportunities isn't right for everyone. This page explains when the fit isn't right and what you can do instead.
 
-\<FeatureGrid
+<FeatureGrid
 heading="When the fit isn't right"
-items={\[
+items={[
 {
 title: "You're not into government",
 content: "If you don't want to sell to the $13tn public sector market, you might not get what you need. We do have some private sector data but the vast majority of our data is for government contracting opportunities."
@@ -32,8 +32,8 @@ content: "If you only sell when you're invited to bid in, or you're entirely opp
 
 There are some free alternatives that can be used instead of a comprehensive service.
 
-\<FeatureGrid
-items={\[
+<FeatureGrid
+items={[
 {
 title: "Government sites",
 content: "Sign up to a handful of different sites that publish opportunities. In the UK it's Find A Tender, in Europe it's TED and in the USA it's SAM. That will get you some opportunities and will get you started but you're going to miss hundreds of opportunities."
@@ -44,29 +44,36 @@ content: "Use AI tools like Perplexity to do some market research. It won't be a
 },
 {
 title: "Google searches",
-content: "Do daily advanced searches on google for your products and your rivals. Eg. Searching on google using 'site\:gov.uk' or 'site:[www.coventry.gov.uk](http://www.coventry.gov.uk)' will give you results for a specific site."
+content: "Do daily advanced searches on google for your products and your rivals. Eg. Searching on google using 'site:gov.uk' or 'site:www.coventry.gov.uk' will give you results for a specific site."
 }
 ]}
 />
 
 ## Frequently Asked Questions
 
-  <Accordion title="Are there opportunities for my business?">
-  Yes! We've been collecting this data for over ten years, we know that there's opportunities for every business in our database.
-  </Accordion>
+<Accordion client:load title="Are there opportunities for my business?">
 
-  <Accordion title="What data is included in the service?">
-  Our coverage extends across all available federal sources worldwide and large numbers of local sources.
-  From Falkirk to Florida, from the Philippines to the Falkland Islands, our data is remarkably diverse. </Accordion>
+Yes! We've been collecting this data for over ten years, we know that there's opportunities for every business in our database.
 
-  <Accordion title="Is there a free trial?">
-  Customers are eligible for a 7 day free trial. We won't ask you for your credit card details and you'll get access to all of
-  our data.
-  </Accordion>
+</Accordion>
 
-  <Accordion title="How does billing work?">
-  Our plans can be paid in advance by either card or by invoice.
-  </Accordion>
+<Accordion client:load title="What data is included in the service?">
+
+Our coverage extends across all available federal sources worldwide and large numbers of local sources. From Falkirk to Florida, from the Philippines to the Falkland Islands, our data is remarkably diverse.
+
+</Accordion>
+
+<Accordion client:load title="Is there a free trial?">
+
+Customers are eligible for a 7 day free trial. We won't ask you for your credit card details and you'll get access to all of our data.
+
+</Accordion>
+
+<Accordion client:load title="How does billing work?">
+
+Our plans can be paid in advance by either card or by invoice.
+
+</Accordion>
 
 ## Don't want to miss opportunities?
 
