--- a/src/content/research/defence-and-security-procurement-trends-global-analysis-2025.mdx
+++ b/src/content/research/defence-and-security-procurement-trends-global-analysis-2025.mdx
@@ -2,21 +2,23 @@
 title: "Defence and Security Procurement Trends - Global Analysis 2025"
 meta_title: "Defence and Security Procurement Trends: Global Analysis 2025 - Open Opportunities"
 description: "Defence and Security Procurement Trends: Global Analysis 2025"
+image: "/images/drone-soldier-green.jpg"
 draft: false
 ---
 
 # Defence and Security Procurement Trends: Global Analysis 2025
 
-[ [ Login ] [ Try for free ] 
-## Table of Contents. * * * * 0 M 
-#### Documents analysed * * 0 
-#### Sources used * * 0 
-#### Countries 
+
 ## 1. Introduction * * $ 0 Bn 
-#### Value of opportunities in 2024 * * 0 Bn. 
-#### Warships value spike in 2025 * * 0 % 
-#### Increase in average contract duration (2022-2024) 
-## The Scale of Our Analysis 
+<StatsGrid
+    items={[
+      { label: "Documents analysed", value: "6M" },
+      { label: "Sources used", value: "820" },
+      { label: "Countries", value: "135" },
+      { label: "Value of opportunities", value: "$42 Bn" }
+    ]}
+  />
+
 
  This comprehensive analysis represents one of the most extensive examinations of publicly available defence and security procurement data ever undertaken specifically to identify ** export opportunities and sales intelligence ** for defence suppliers. Our research team analysed ** 6 million procurement documents ** from ** 820 different sources ** across ** 135 countries ** , spanning the period from 2022 to 2025. 
 ## Data Limitations and Export Market Coverage 
