update about page, finish when you should use oo and update buttons

--- a/src/content/product/when-open-opportunities-isn-t-right-for-you.mdx
+++ b/src/content/product/when-open-opportunities-isn-t-right-for-you.mdx
@@ -52,29 +52,51 @@ content: "Do daily advanced searches on google for your products and your rivals
 ## Frequently Asked Questions
 
 <Accordion client:load title="Are there opportunities for my business?">
-
 Yes! We've been collecting this data for over ten years, we know that there's opportunities for every business in our database.
-
 </Accordion>
 
 <Accordion client:load title="What data is included in the service?">
-
 Our coverage extends across all available federal sources worldwide and large numbers of local sources. From Falkirk to Florida, from the Philippines to the Falkland Islands, our data is remarkably diverse.
+</Accordion>
 
+<Accordion client:load title="Can I see both tenders and contracts?">
+Yes. We gather all of the records from every public source we find. So you'll find tenders, contracts and prior information notices. 
+</Accordion>
+
+<Accordion client:load title="What if I don't want international opportunities?">
+Great. You can set up your search to include only the data from the jurisdiction you want. All of your subsequent searches will be limited to your market.
+
+Whenever you want to look further afield you can change an individual search or reset your default countries. 
+
+With Open Opportunities you're in control. We're here to help you grow, you can decide what you need to see.
+</Accordion>
+
+<Accordion client:load title="Do you add new sources?">
+Open Opportunities have a rich history of opening up government data worldwide. We are dedicated to continually expanding our data and introducing new features.
+
+We typically add at least three new sources every month and are committed to adding more every month.
 </Accordion>
 
 <Accordion client:load title="Is there a free trial?">
-
 Customers are eligible for a 7 day free trial. We won't ask you for your credit card details and you'll get access to all of our data.
-
 </Accordion>
 
 <Accordion client:load title="How does billing work?">
-
 Our plans can be paid in advance by either card or by invoice.
+</Accordion>
 
+<Accordion client:load title="What support do you provide?">
+Our skilled researchers are on hand to help. We provide help to on-board you and we're always on hand to help you set up your searches correctly
+
+When you sign up our founder gives you his personal mobile number, so you can call him if you ever need a problem fixed. Our team are dedicated to helping you win new business.
 </Accordion>
 
 ## Don't want to miss opportunities?
+If you want to be able to get a simple daily summary of all the best opportunities for your business.
 
-If you want to be able to get a simple daily summary of all the best opportunities for your business, [try for free](https://app.openopps.com) or [book a demo](https://www.openopps.com/book-a-call-for-the-best-chance-to-win-bids/).
+<Button label="Try for free" link="https://app.openopps.com" />
+
+<Button label="Book a demo" link="https://calendly.com/d/cpjt-3fx-8jd/open-opportunities-demo" style="outline" />
+
+
+
